--- a/docker-compose/docker-compose.dev.yaml
+++ b/docker-compose/docker-compose.dev.yaml
@@ -7,7 +7,7 @@ networks:
 
 services:
   open-mfa:
-    image: rodzera/open-mfa:latest
+    image: rodzera/open-mfa:dev
     container_name: open-mfa
     restart: unless-stopped
     depends_on:
@@ -31,6 +31,7 @@ services:
     ports:
       - "8080:8080"
     volumes:
+      - ./logs:/logs
       - /etc/localtime:/etc/localtime:ro
 
   redis:
