--- a/docker-compose/docker-compose.yaml
+++ b/docker-compose/docker-compose.yaml
@@ -14,6 +14,7 @@ services:
       - redis
     environment:
       _SECRET_KEY: ${_SECRET_KEY}
+      _ADMIN_USER: ${_ADMIN_USER}
       _ADMIN_PASS: ${_ADMIN_PASS}
       _REDIS_HOST: redis
       _REDIS_PASS: ${_REDIS_PASS}
