--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -7,6 +7,7 @@ Flask==3.0.3
 flask-marshmallow==1.2.1
 greenlet==3.1.1
 gunicorn==23.0.0
+iniconfig==2.0.0
 itsdangerous==2.2.0
 Jinja2==3.1.4
 jsonschema==4.23.0
@@ -16,9 +17,12 @@ MarkupSafe==3.0.2
 marshmallow==3.23.0
 mistune==3.0.2
 packaging==24.1
+pluggy==1.5.0
 psycopg2==2.9.10
 PyMySQL==1.1.1
 pyotp==2.9.0
+pytest==8.3.4
+pytest-mock==3.14.0
 PyYAML==6.0.2
 redis==5.2.0
 referencing==0.35.1
