--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -2,6 +2,7 @@ alembic==1.13.3
 attrs==24.2.0
 blinker==1.8.2
 click==8.1.7
+coverage==7.6.9
 flasgger==0.9.7.1
 Flask==3.0.3
 flask-marshmallow==1.2.1
