--- a/.github/workflows/test_and_build.yml
+++ b/.github/workflows/test_and_build.yml
@@ -36,7 +36,7 @@ jobs:
     - name: Run tests
       run: |
         export _TESTING=1
-        python3 -m pytest src/tests/tests
+        python3 -m pytest src/tests
 
   docker_hub:
     name: Publish docker image to docker hub
