--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -3,6 +3,7 @@ attrs==24.2.0
 blinker==1.8.2
 click==8.1.7
 coverage==7.6.9
+fakeredis==2.26.1
 flasgger==0.9.7.1
 Flask==3.0.3
 flask-marshmallow==1.2.1
@@ -29,6 +30,7 @@ redis==5.2.0
 referencing==0.35.1
 rpds-py==0.20.0
 six==1.16.0
+sortedcontainers==2.4.0
 SQLAlchemy==2.0.36
 typing_extensions==4.12.2
 Werkzeug==3.0.4
