fix: logs dir not created before gunicorn start; add: latest tag in Makefile

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,2 +1,2 @@
 all:
-	docker build --tag=rodzera/open-mfa:dev . > docker-build.log
+	docker build --tag=rodzera/open-mfa:dev --tag=rodzera/open-mfa:latest . > docker-build.log
