--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,8 +1,10 @@
 alembic==1.13.3
 attrs==24.2.0
 blinker==1.8.2
+cffi==1.17.1
 click==8.1.7
 coverage==7.6.9
+cryptography==44.0.0
 fakeredis==2.26.1
 flasgger==0.9.7.1
 Flask==3.0.3
@@ -11,7 +13,7 @@ greenlet==3.1.1
 gunicorn==23.0.0
 iniconfig==2.0.0
 itsdangerous==2.2.0
-Jinja2==3.1.4
+Jinja2==3.1.5
 jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
 Mako==1.3.5
@@ -21,6 +23,7 @@ mistune==3.0.2
 packaging==24.1
 pluggy==1.5.0
 psycopg2==2.9.10
+pycparser==2.22
 PyMySQL==1.1.1
 pyotp==2.9.0
 pytest==8.3.4
