--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -7,13 +7,12 @@ networks:
 
 services:
   open-mfa:
-    image: rodzera/open-mfa:dev
+    image: rodzera/open-mfa:latest
     container_name: open-mfa
-    restart: unless-stopped
+    restart: on-failure:3
     depends_on:
       - redis
     environment:
-      _DEBUG: 1
       _SECRET_KEY: ${_SECRET_KEY}
       _B64_AES_KEY: ${_B64_AES_KEY}
       _ADMIN_USER: ${_ADMIN_USER}
@@ -22,6 +21,9 @@ services:
       _REDIS_PASS: ${_REDIS_PASS}
       HOST: 0.0.0.0
       PORT: 8080
+      WORKERS: 4
+      THREADS: 64
+      WORKER_CONNECTIONS: 8192
       TZ: Etc/Greenwich
     networks:
       open-mfa:
@@ -31,11 +33,10 @@ services:
     ports:
       - "8080:8080"
     volumes:
-      - ./logs:/logs
       - /etc/localtime:/etc/localtime:ro
 
   redis:
-    image: redis:7.4.1
+    image: redis:7.4.1-alpine
     container_name: redis
     restart: unless-stopped
     environment:
