refactor: logging messages and error/exception handling

--- a/src/gunicorn_log.conf
+++ b/src/gunicorn_log.conf
@@ -12,7 +12,7 @@ level=INFO
 handlers=console
 
 [logger_gunicorn.error]
-level=INFO
+level=WARNING
 handlers=error_file
 propagate=1
 qualname=gunicorn.error
