--- a/.github/workflows/test_and_build.yml
+++ b/.github/workflows/test_and_build.yml
@@ -9,22 +9,27 @@ on:
 jobs:
   tests:
     name: Run tests
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     outputs:
       VERSION: ${{ steps.version.outputs.VERSION }}
     steps:
     - name: Checkout
       uses: actions/checkout@v3
+      with:
+        fetch-depth: 0
 
     - name: Extract version from version.yaml
       id: version
       run: |
-        echo "VERSION=$(cat src/app/version.yaml | tr -d '[:space:]' | awk -F: '{print $2}')" | tee -a $GITHUB_ENV $GITHUB_OUTPUT
+        VERSION=$(cat src/app/version.yaml | tr -d '[:space:]' | awk -F: '{print $2}')
+        echo "VERSION=$VERSION" | tee -a $GITHUB_ENV $GITHUB_OUTPUT
 
-    - name: Check if version exists on Docker Hub
+    - name: Check if git tag already exists
       run: |
-        RESPONSE=$(curl -s -u "${{ secrets.DOCKERHUB_USER }}:${{ secrets.DOCKERHUB_PASS }}" 'https://hub.docker.com/v2/namespaces/${{ secrets.DOCKERHUB_USER }}/repositories/open-mfa/tags/${{ env.VERSION }}')
-        bash .github/scripts/check_version.sh "$RESPONSE" "${{ env.VERSION }}"          
+        if git rev-parse "${{ env.VERSION }}" >/dev/null 2>&1; then
+          echo "Tag ${{ env.VERSION }} already exists. Skipping build."
+          exit 1
+        fi
 
     - name: Set up python
       uses: actions/setup-python@v4
@@ -47,31 +52,41 @@ jobs:
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
 
-  docker_hub:
-    name: Publish docker image to docker hub
+  tag_and_publish:
+    name: Tag and publish to GHCR
     runs-on: ubuntu-latest
     needs: tests
     if: github.ref == 'refs/heads/master'
     steps:
-      - name: Login to Docker Hub
+      - name: Log in to GHCR
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKERHUB_USER }}
-          password: ${{ secrets.DOCKERHUB_PASS }}
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GH_TOKEN }}
 
-      - name: Extract metadata for docker
+      - name: Set up docker metadata
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ${{ secrets.DOCKERHUB_USER }}/open-mfa
+          images: ghcr.io/${{ github.repository }}
 
       - name: Set up docker buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Build and push
+      - name: Build and push docker image
         uses: docker/build-push-action@v5
         with:
-          context: "{{defaultContext}}:src"
+          context: src
           push: true
-          tags: ${{ secrets.DOCKERHUB_USER }}/open-mfa:${{ needs.tests.outputs.VERSION }} , ${{ secrets.DOCKERHUB_USER }}/open-mfa:latest
+          tags: |
+            ghcr.io/${{ github.repository }}:${{ needs.tests.outputs.VERSION }}
+            ghcr.io/${{ github.repository }}:latest
           labels: ${{ steps.meta.outputs.labels }}
+
+      - name: Create and push git tag
+        run: |
+          git config user.name "${{ github.actor }}"
+          git config user.email "${{ github.actor }}@users.noreply.github.com"
+          git tag "${{ needs.tests.outputs.VERSION }}"
+          git push origin "${{ needs.tests.outputs.VERSION }}"
