--- a/.github/workflows/test_and_build.yml
+++ b/.github/workflows/test_and_build.yml
@@ -77,7 +77,7 @@ jobs:
       - name: Build and push docker image
         uses: docker/build-push-action@v5
         with:
-          context: src
+          context: "{{defaultContext}}:src"
           push: true
           tags: |
             ghcr.io/${{ github.repository }}:${{ needs.tests.outputs.VERSION }}
