--- a/.github/workflows/test_and_build.yml
+++ b/.github/workflows/test_and_build.yml
@@ -58,9 +58,6 @@ jobs:
     needs: tests
     if: github.ref == 'refs/heads/master'
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-
       - name: Log in to GHCR
         uses: docker/login-action@v3
         with:
@@ -80,7 +77,7 @@ jobs:
       - name: Build and push docker image
         uses: docker/build-push-action@v5
         with:
-          context: src
+          context: "{{defaultContext}}:src"
           file: docker/Dockerfile
           push: true
           tags: |
