--- a/.github/workflows/test_and_build.yml
+++ b/.github/workflows/test_and_build.yml
@@ -18,7 +18,7 @@ jobs:
       with:
         fetch-depth: 0
 
-    - name: Extract version from version.yaml
+    - name: Extract app version
       id: version
       run: |
         VERSION=$(cat src/app/version.yaml | tr -d '[:space:]' | awk -F: '{print $2}')
@@ -56,9 +56,6 @@ jobs:
     name: Tag and publish to GHCR
     runs-on: ubuntu-latest
     needs: tests
-    permissions:
-      contents: read
-      packages: write
     if: github.ref == 'refs/heads/master'
     steps:
       - name: Log in to GHCR
@@ -66,7 +63,7 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
-          password: ${{ secrets.GH_TOKEN }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Set up docker metadata
         id: meta
