--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,14 @@
-name: Test and Build
+name: Build and Publish Docker Image
 
 on:
   push:
     paths:
       - 'src/**'
       - '.github/**'
+
+env:
+  ECR_URI: ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/${{ github.repository }}
+  GHCR_URI: ghcr.io/${{ github.repository }}
 
 jobs:
   tests:
@@ -70,25 +74,35 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }}
+
+      - name: Log in to AWS ECR
+        uses: aws-actions/amazon-ecr-login@v2
+
       - name: Set up docker metadata
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ghcr.io/${{ github.repository }}
+          images: |
+            ${{ ECR_URI }}
+            ${{ GHCR_URI }}
+          tags: type=raw,value=${{ needs.tests.outputs.VERSION }}
 
       - name: Set up docker buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Build and push docker image
+      - name: Build and push to container registries
         uses: docker/build-push-action@v5
         with:
-          context: "{{defaultContext}}:src"
+          context: ./src
           file: docker/Dockerfile
           push: true
-          tags: |
-            ghcr.io/${{ github.repository }}:${{ needs.tests.outputs.VERSION }}
-            ghcr.io/${{ github.repository }}:latest
-          labels: ${{ steps.meta.outputs.labels }}
+          tags: ${{ steps.meta.outputs.tags }}
 
       - name: Create and push git tag
         run: |
