--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,7 +53,7 @@ jobs:
         token: ${{ secrets.CODECOV_TOKEN }}
 
   tag_and_publish:
-    name: Tag and publish to GHCR
+    name: Tag and publish to container registries
     runs-on: ubuntu-latest
     needs: tests
     if: github.ref == 'refs/heads/master'
