--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,7 +53,7 @@ jobs:
         token: ${{ secrets.CODECOV_TOKEN }}
 
   tag_and_publish:
-    name: Tag and publish to container registries
+    name: Tag and publish docker image
     runs-on: ubuntu-latest
     needs: tests
     if: github.ref == 'refs/heads/master'
@@ -95,15 +95,15 @@ jobs:
       - name: Set up docker buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Build and push to container registries
+      - name: Build and push docker image
         uses: docker/build-push-action@v5
         with:
-          context: ./src
+          context: "{{defaultContext}}:src"
           file: docker/Dockerfile
           push: true
           tags: ${{ steps.meta.outputs.tags }}
 
-      - name: Create and push git tag
+      - name: Create and push git version tag
         run: |
           git config user.name "${{ github.actor }}"
           git config user.email "${{ github.actor }}@users.noreply.github.com"
