--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -90,7 +90,9 @@ jobs:
           images: |
             ${{ env.ECR_URI }}
             ${{ env.GHCR_URI }}
-          tags: type=raw,value=${{ needs.tests.outputs.VERSION }}
+          tags: |
+            type=raw,value=latest
+            type=raw,value=${{ needs.tests.outputs.VERSION }}
 
       - name: Set up docker buildx
         uses: docker/setup-buildx-action@v3
