feat: terraform prd stack

--- a/deploy/Makefile
+++ b/deploy/Makefile
@@ -7,11 +7,11 @@ dev-restart:
 dev-down:
 	docker compose --env-file dev/.env -f docker-compose.yaml -f dev/docker-compose.dev.yaml down
 
-prd-up:
-	docker compose --env-file prd/.env -f docker-compose.yaml -f prd/docker-compose.prd.yaml up -d
+staging-up:
+	docker compose --env-file staging/.env -f docker-compose.yaml -f staging/docker-compose.staging.yaml up -d
 
-prd-restart:
-	docker compose --env-file prd/.env -f docker-compose.yaml -f prd/docker-compose.prd.yaml restart
+staging-restart:
+	docker compose --env-file staging/.env -f docker-compose.yaml -f staging/docker-compose.staging.yaml restart
 
-prd-down:
-	docker compose --env-file prd/.env -f docker-compose.yaml -f prd/docker-compose.prd.yaml down
+staging-down:
+	docker compose --env-file staging/.env -f docker-compose.yaml -f staging/docker-compose.staging.yaml down
