refactor: deploy infra and docs

--- a/docker-compose/Makefile
+++ b/docker-compose/Makefile
@@ -1,4 +1,7 @@
-dev-up:
+dev-build:
+	docker build -t rodzera/open-mfa:dev -f ../src/docker/Dockerfile ../src
+
+dev-up: dev-build
 	docker compose --env-file dev/.env -f docker-compose.yaml -f dev/docker-compose.dev.yaml up -d
 
 dev-restart:
