--- a/docker-compose/dev/nginx.conf
+++ b/docker-compose/dev/nginx.conf
@@ -22,18 +22,17 @@ http {
   ##
   ssl_prefer_server_ciphers on;
   ssl_protocols TLSv1.2 TLSv1.3;
-  ssl_verify_client optional_no_ca;
   ssl_certificate /etc/nginx/certs/open-mfa.pem;
   ssl_certificate_key /etc/nginx/certs/open-mfa-key.pem;
 
   ##
   # Proxy Settings
   ##
+  proxy_redirect http:// https://;
   proxy_set_header Host $host;
   proxy_set_header X-Real-IP $remote_addr;
   proxy_set_header X-Forwarded-Proto $scheme;
   proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-  proxy_redirect http:// https://;
   map $ssl_client_cert $client_cert_header {
       default $ssl_client_cert;
       ""      "";
@@ -61,7 +60,7 @@ http {
   # Services
   ##
   server {
-    server_name app.open-mfa.local;
+    server_name open-mfa.local;
     listen 443 ssl;
     location / {
       proxy_pass http://172.19.0.1:8080;
